[project]
name = "alexwu"
version = "0.1.0"
description = "Alex Wu's data science helper functions"
authors = [
    {name = "Alexander Wu", email = "alexander.wu@roche.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
